tests/assembler/pass/test28.ial
type T
{
    field instance float32[0] vec;
}
